Wed Mar  4 18:51:16 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: remove a warning and change style

Wed Mar  4 18:40:56 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: make it compile

Mon Mar  2 08:58:31 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/msvc6/libTDS.dsp: add needed files

Mon Mar  2 00:09:58 EST 2009	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c src/dblib/dblib.c
	* samples/bcp_test.cpp samples/Makefile.bcp_test
	- bcp_init sets default values for host file columns
	- if host_filename is not NULL.

Sat Feb 28 12:32:06 EST 2009	JK Lowden <jklowden@freetds.org>
	* include/sybdb.h DBDATEREC members are 32-bit
	* BUGS TODO more things to fix
	* include/tds.h src/tds/login.c src/tds/net.c
	- login packet debugging options

Fri Feb 27 16:50:57 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/bcp.c src/dblib/unittests/common.c:
	* src/dblib/unittests/common.h src/dblib/unittests/dbmorecmds.c:
	* src/dblib/unittests/done_handling.c src/dblib/unittests/rpc.c:
	* src/dblib/unittests/t0001.c src/dblib/unittests/t0002.c:
	* src/dblib/unittests/t0003.c src/dblib/unittests/t0004.c:
	* src/dblib/unittests/t0005.c src/dblib/unittests/t0006.c:
	* src/dblib/unittests/t0007.c src/dblib/unittests/t0009.c:
	* src/dblib/unittests/t0011.c src/dblib/unittests/t0012.c:
	* src/dblib/unittests/t0013.c src/dblib/unittests/t0014.c:
	* src/dblib/unittests/t0015.c src/dblib/unittests/t0016.c:
	* src/dblib/unittests/t0017.c src/dblib/unittests/t0018.c:
	* src/dblib/unittests/t0020.c src/dblib/unittests/t0022.c:
	* src/dblib/unittests/t0023.c src/dblib/unittests/text_buffer.c:
	* src/dblib/unittests/timeout.c:
	- remove INPUT param from sql_cmd

Fri Feb 27 11:46:15 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds_sysdep_private.h include/tds_sysdep_public.h.in:
	- cleanup public sysdep header
